# Guardian_Orangpi5

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
SPEC/: SPEC_ARCHITECTURE.md  SPEC_ENGINEERING.md  SPEC_PRODUCT.md
configs/: guardian.yaml
scripts/: .gitkeep  deploy.sh
src/: config.rs  lib.rs  main.rs
src/alerts/: engine.rs  mod.rs  rules.rs  state.rs
src/collectors/: cpu.rs  memory.rs  mod.rs  temperature.rs
src/metrics/: mod.rs  types.rs
src/notifiers/: discord.rs  log.rs  mod.rs
src/services/: orchestrator.rs
systemd/: .gitkeep  guardianrs.service
