[package]
name = "guardian-rs"
version = "0.1.0"
edition = "2021"
description = "Lightweight infrastructure monitoring and alerting daemon for ARM Linux servers"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"